<resources>
    <string name="app_name" translatable="false">TASKILLER</string>
    <string name="volver">Volver</string>
    <string name="LoginIniciaSesion">Inicia Sesión</string>
    <string name="LoginNombreUsuario">Usuario</string>
    <string name="LoginContrasena">Contraseña</string>
    <string-array name="idiomas">
        <item>Español</item>
        <item>Inglés</item>
        <item>Catalán</item>
    </string-array>
    <string name="areaPersonal">Área Personal</string>
    <string name="PaginaPrincipalTxtViewProyectos">Proyectos</string>
    <string name="tarea">Tarea</string>
    <string name="inicio">Inicio:</string>
    <string name="fin">Fin:</string>
    <string name="filtro">Filtro</string>
    <string name="anadir_tarjeta">Añadir Tarjeta</string>
    <string name="nomProyectoTarjPagPrincipal">Nombre del Proyecto</string>
    <string name="mis_tareas">Mis tareas</string>
    <string name="graficos">Gráficos del proyecto:</string>
    <string name="subtareas">Subtareas</string>
    <string name="usuarios">Usuarios:</string>
    <string name="prioridad">prioridad</string>
    <string name="nombre_proyecto">Nombre_Proyecto</string>
    <string name="fecha_inicio_txt">Fecha inicio:</string>
    <string-array name="estados">
        <item>Por comenzar</item>
        <item>En progreso</item>
        <item>Entregado</item>
        <item>Revisado</item>
        <item>Bloqueado</item>
    </string-array>
    <string name="title_activity_graficos" translatable="false">GraficosActivity</string>
    <string name="horas_dedicadas">Horas Dedicadas:</string>
    <string name="descripci_n">Descripción:</string>
    <string name="numero_de_tareas">Número de tareas:</string>
    <string name="fecha_de_entrega">Fecha de entrega:</string>
</resources>